parser/y.output
Grammar

    0 $accept: program $end

    1 program: stmt
    2        | SYS_COMMAND
    3        | TOKEN_EXIT
    4        | TOKEN_EOF

    5 stmt: sysStmt ';'
    6     | dbStmt ';'
    7     | tbStmt ';'
    8     | idxStmt ';'

    9 sysStmt: TOKEN_SHOW TOKEN_DATABASES

   10 dbStmt: TOKEN_CREATE TOKEN_DATABASE dbName
   11       | TOKEN_DROP TOKEN_DATABASE dbName
   12       | TOKEN_USE dbName
   13       | TOKEN_SHOW TOKEN_TABLES

   14 tbStmt: TOKEN_DROP TOKEN_TABLE tbName
   15       | TOKEN_CREATE TOKEN_TABLE tbName '(' fieldList ')'
   16       | TOKEN_DESC tbName
   17       | insert
   18       | TOKEN_DELETE TOKEN_FROM tbName TOKEN_WHERE whereClause
   19       | TOKEN_UPDATE tbName TOKEN_SET setClause TOKEN_WHERE whereClause
   20       | TOKEN_SELECT selector TOKEN_FROM tableList TOKEN_WHERE whereClause

   21 insert: TOKEN_INSERT TOKEN_INTO tbName TOKEN_VALUES '(' valueList ')'
   22       | insert ',' '(' valueList ')'

   23 idxStmt: TOKEN_CREATE TOKEN_INDEX tbName '(' colName ')'
   24        | TOKEN_DROP TOKEN_INDEX tbName '(' colName ')'

   25 fieldList: field
   26          | fieldList ',' field

   27 field: colName type
   28      | colName type TOKEN_NOT TOKEN_NULL
   29      | TOKEN_PRIMARY TOKEN_KEY '(' columnList ')'
   30      | TOKEN_FOREIGN TOKEN_KEY '(' colName ')' TOKEN_REFERENCES tbName '(' colName ')'

   31 selector: '*'
   32         | colList

   33 colList: col
   34        | colList ',' col

   35 tableList: tbName
   36          | tableList ',' tbName

   37 columnList: colName
   38           | columnList ',' colName

   39 type: TOKEN_INT '(' VALUE_INT ')'
   40     | TOKEN_VARCHAR '(' VALUE_INT ')'
   41     | TOKEN_DATE
   42     | TOKEN_FLOAT

   43 value: VALUE_INT
   44      | VALUE_STRING
   45      | VALUE_FLOAT
   46      | TOKEN_NULL

   47 valueList: value
   48          | valueList ',' value

   49 setClause: colName OP_EQ value
   50          | setClause ',' colName OP_EQ value

   51 whereClause: condition
   52            | whereClause TOKEN_AND condition

   53 condition: col op expr
   54          | col TOKEN_IS TOKEN_NULL
   55          | col TOKEN_IS TOKEN_NOT TOKEN_NULL

   56 col: colName
   57    | tbName '.' colName

   58 expr: col
   59     | value

   60 op: OP_LT
   61   | OP_LE
   62   | OP_GT
   63   | OP_GE
   64   | OP_EQ
   65   | OP_NE

   66 dbName: TOKEN_STRING_IDENTIFIER

   67 tbName: TOKEN_STRING_IDENTIFIER

   68 colName: TOKEN_STRING_IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15 21 22 23 24 29 30 39 40
')' (41) 15 21 22 23 24 29 30 39 40
'*' (42) 31
',' (44) 22 26 34 36 38 48 50
'.' (46) 57
';' (59) 5 6 7 8
error (256)
TOKEN_EOF (258) 4
TOKEN_CREATE (259) 10 15 23
TOKEN_DATABASE (260) 10 11
TOKEN_DATABASES (261) 9
TOKEN_DROP (262) 11 14 24
TOKEN_USE (263) 12
TOKEN_SHOW (264) 9 13
TOKEN_TABLE (265) 14 15
TOKEN_TABLES (266) 13
TOKEN_NOT (267) 28 55
TOKEN_NULL (268) 28 46 54 55
TOKEN_KEY (269) 29 30
TOKEN_PRIMARY (270) 29
TOKEN_INTO (271) 21
TOKEN_INSERT (272) 21
TOKEN_VALUES (273) 21
TOKEN_DELETE (274) 18
TOKEN_FROM (275) 18 20
TOKEN_WHERE (276) 18 19 20
TOKEN_UPDATE (277) 19
TOKEN_SET (278) 19
TOKEN_SELECT (279) 20
TOKEN_IS (280) 54 55
TOKEN_INT (281) 39
TOKEN_VARCHAR (282) 40
TOKEN_DESC (283) 16
TOKEN_INDEX (284) 23 24
TOKEN_AND (285) 52
TOKEN_DATE (286) 41
TOKEN_FLOAT (287) 42
TOKEN_FOREIGN (288) 30
TOKEN_REFERENCES (289) 30
OP_LT (290) 60
OP_LE (291) 61
OP_GT (292) 62
OP_GE (293) 63
OP_EQ (294) 49 50 64
OP_NE (295) 65
TOKEN_EXIT (296) 3
TOKEN_STRING_IDENTIFIER (297) 66 67 68
SYS_COMMAND (298) 2
VALUE_STRING (299) 44
VALUE_INT (300) 39 40 43
VALUE_FLOAT (301) 45


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program (54)
    on left: 1 2 3 4, on right: 0
stmt (55)
    on left: 5 6 7 8, on right: 1
sysStmt (56)
    on left: 9, on right: 5
dbStmt (57)
    on left: 10 11 12 13, on right: 6
tbStmt (58)
    on left: 14 15 16 17 18 19 20, on right: 7
insert (59)
    on left: 21 22, on right: 17 22
idxStmt (60)
    on left: 23 24, on right: 8
fieldList (61)
    on left: 25 26, on right: 15 26
field (62)
    on left: 27 28 29 30, on right: 25 26
selector (63)
    on left: 31 32, on right: 20
colList (64)
    on left: 33 34, on right: 32 34
tableList (65)
    on left: 35 36, on right: 20 36
columnList (66)
    on left: 37 38, on right: 29 38
type (67)
    on left: 39 40 41 42, on right: 27 28
value (68)
    on left: 43 44 45 46, on right: 47 48 49 50 59
valueList (69)
    on left: 47 48, on right: 21 22 48
setClause (70)
    on left: 49 50, on right: 19 50
whereClause (71)
    on left: 51 52, on right: 18 19 20 52
condition (72)
    on left: 53 54 55, on right: 51 52
col (73)
    on left: 56 57, on right: 33 34 53 54 55 58
expr (74)
    on left: 58 59, on right: 53
op (75)
    on left: 60 61 62 63 64 65, on right: 53
dbName (76)
    on left: 66, on right: 10 11 12
tbName (77)
    on left: 67, on right: 14 15 16 18 19 21 23 24 30 35 36 57
colName (78)
    on left: 68, on right: 23 24 27 28 30 37 38 49 50 56 57


state 0

    0 $accept: . program $end

    TOKEN_EOF     shift, and go to state 1
    TOKEN_CREATE  shift, and go to state 2
    TOKEN_DROP    shift, and go to state 3
    TOKEN_USE     shift, and go to state 4
    TOKEN_SHOW    shift, and go to state 5
    TOKEN_INSERT  shift, and go to state 6
    TOKEN_DELETE  shift, and go to state 7
    TOKEN_UPDATE  shift, and go to state 8
    TOKEN_SELECT  shift, and go to state 9
    TOKEN_DESC    shift, and go to state 10
    TOKEN_EXIT    shift, and go to state 11
    SYS_COMMAND   shift, and go to state 12

    program  go to state 13
    stmt     go to state 14
    sysStmt  go to state 15
    dbStmt   go to state 16
    tbStmt   go to state 17
    insert   go to state 18
    idxStmt  go to state 19


state 1

    4 program: TOKEN_EOF .

    $default  reduce using rule 4 (program)


state 2

   10 dbStmt: TOKEN_CREATE . TOKEN_DATABASE dbName
   15 tbStmt: TOKEN_CREATE . TOKEN_TABLE tbName '(' fieldList ')'
   23 idxStmt: TOKEN_CREATE . TOKEN_INDEX tbName '(' colName ')'

    TOKEN_DATABASE  shift, and go to state 20
    TOKEN_TABLE     shift, and go to state 21
    TOKEN_INDEX     shift, and go to state 22


state 3

   11 dbStmt: TOKEN_DROP . TOKEN_DATABASE dbName
   14 tbStmt: TOKEN_DROP . TOKEN_TABLE tbName
   24 idxStmt: TOKEN_DROP . TOKEN_INDEX tbName '(' colName ')'

    TOKEN_DATABASE  shift, and go to state 23
    TOKEN_TABLE     shift, and go to state 24
    TOKEN_INDEX     shift, and go to state 25


state 4

   12 dbStmt: TOKEN_USE . dbName

    TOKEN_STRING_IDENTIFIER  shift, and go to state 26

    dbName  go to state 27


state 5

    9 sysStmt: TOKEN_SHOW . TOKEN_DATABASES
   13 dbStmt: TOKEN_SHOW . TOKEN_TABLES

    TOKEN_DATABASES  shift, and go to state 28
    TOKEN_TABLES     shift, and go to state 29


state 6

   21 insert: TOKEN_INSERT . TOKEN_INTO tbName TOKEN_VALUES '(' valueList ')'

    TOKEN_INTO  shift, and go to state 30


state 7

   18 tbStmt: TOKEN_DELETE . TOKEN_FROM tbName TOKEN_WHERE whereClause

    TOKEN_FROM  shift, and go to state 31


state 8

   19 tbStmt: TOKEN_UPDATE . tbName TOKEN_SET setClause TOKEN_WHERE whereClause

    TOKEN_STRING_IDENTIFIER  shift, and go to state 32

    tbName  go to state 33


state 9

   20 tbStmt: TOKEN_SELECT . selector TOKEN_FROM tableList TOKEN_WHERE whereClause

    TOKEN_STRING_IDENTIFIER  shift, and go to state 34
    '*'                      shift, and go to state 35

    selector  go to state 36
    colList   go to state 37
    col       go to state 38
    tbName    go to state 39
    colName   go to state 40


state 10

   16 tbStmt: TOKEN_DESC . tbName

    TOKEN_STRING_IDENTIFIER  shift, and go to state 32

    tbName  go to state 41


state 11

    3 program: TOKEN_EXIT .

    $default  reduce using rule 3 (program)


state 12

    2 program: SYS_COMMAND .

    $default  reduce using rule 2 (program)


state 13

    0 $accept: program . $end

    $end  shift, and go to state 42


state 14

    1 program: stmt .

    $default  reduce using rule 1 (program)


state 15

    5 stmt: sysStmt . ';'

    ';'  shift, and go to state 43


state 16

    6 stmt: dbStmt . ';'

    ';'  shift, and go to state 44


state 17

    7 stmt: tbStmt . ';'

    ';'  shift, and go to state 45


state 18

   17 tbStmt: insert .
   22 insert: insert . ',' '(' valueList ')'

    ','  shift, and go to state 46

    $default  reduce using rule 17 (tbStmt)


state 19

    8 stmt: idxStmt . ';'

    ';'  shift, and go to state 47


state 20

   10 dbStmt: TOKEN_CREATE TOKEN_DATABASE . dbName

    TOKEN_STRING_IDENTIFIER  shift, and go to state 26

    dbName  go to state 48


state 21

   15 tbStmt: TOKEN_CREATE TOKEN_TABLE . tbName '(' fieldList ')'

    TOKEN_STRING_IDENTIFIER  shift, and go to state 32

    tbName  go to state 49


state 22

   23 idxStmt: TOKEN_CREATE TOKEN_INDEX . tbName '(' colName ')'

    TOKEN_STRING_IDENTIFIER  shift, and go to state 32

    tbName  go to state 50


state 23

   11 dbStmt: TOKEN_DROP TOKEN_DATABASE . dbName

    TOKEN_STRING_IDENTIFIER  shift, and go to state 26

    dbName  go to state 51


state 24

   14 tbStmt: TOKEN_DROP TOKEN_TABLE . tbName

    TOKEN_STRING_IDENTIFIER  shift, and go to state 32

    tbName  go to state 52


state 25

   24 idxStmt: TOKEN_DROP TOKEN_INDEX . tbName '(' colName ')'

    TOKEN_STRING_IDENTIFIER  shift, and go to state 32

    tbName  go to state 53


state 26

   66 dbName: TOKEN_STRING_IDENTIFIER .

    $default  reduce using rule 66 (dbName)


state 27

   12 dbStmt: TOKEN_USE dbName .

    $default  reduce using rule 12 (dbStmt)


state 28

    9 sysStmt: TOKEN_SHOW TOKEN_DATABASES .

    $default  reduce using rule 9 (sysStmt)


state 29

   13 dbStmt: TOKEN_SHOW TOKEN_TABLES .

    $default  reduce using rule 13 (dbStmt)


state 30

   21 insert: TOKEN_INSERT TOKEN_INTO . tbName TOKEN_VALUES '(' valueList ')'

    TOKEN_STRING_IDENTIFIER  shift, and go to state 32

    tbName  go to state 54


state 31

   18 tbStmt: TOKEN_DELETE TOKEN_FROM . tbName TOKEN_WHERE whereClause

    TOKEN_STRING_IDENTIFIER  shift, and go to state 32

    tbName  go to state 55


state 32

   67 tbName: TOKEN_STRING_IDENTIFIER .

    $default  reduce using rule 67 (tbName)


state 33

   19 tbStmt: TOKEN_UPDATE tbName . TOKEN_SET setClause TOKEN_WHERE whereClause

    TOKEN_SET  shift, and go to state 56


state 34

   67 tbName: TOKEN_STRING_IDENTIFIER .
   68 colName: TOKEN_STRING_IDENTIFIER .

    '.'       reduce using rule 67 (tbName)
    $default  reduce using rule 68 (colName)


state 35

   31 selector: '*' .

    $default  reduce using rule 31 (selector)


state 36

   20 tbStmt: TOKEN_SELECT selector . TOKEN_FROM tableList TOKEN_WHERE whereClause

    TOKEN_FROM  shift, and go to state 57


state 37

   32 selector: colList .
   34 colList: colList . ',' col

    ','  shift, and go to state 58

    $default  reduce using rule 32 (selector)


state 38

   33 colList: col .

    $default  reduce using rule 33 (colList)


state 39

   57 col: tbName . '.' colName

    '.'  shift, and go to state 59


state 40

   56 col: colName .

    $default  reduce using rule 56 (col)


state 41

   16 tbStmt: TOKEN_DESC tbName .

    $default  reduce using rule 16 (tbStmt)


state 42

    0 $accept: program $end .

    $default  accept


state 43

    5 stmt: sysStmt ';' .

    $default  reduce using rule 5 (stmt)


state 44

    6 stmt: dbStmt ';' .

    $default  reduce using rule 6 (stmt)


state 45

    7 stmt: tbStmt ';' .

    $default  reduce using rule 7 (stmt)


state 46

   22 insert: insert ',' . '(' valueList ')'

    '('  shift, and go to state 60


state 47

    8 stmt: idxStmt ';' .

    $default  reduce using rule 8 (stmt)


state 48

   10 dbStmt: TOKEN_CREATE TOKEN_DATABASE dbName .

    $default  reduce using rule 10 (dbStmt)


state 49

   15 tbStmt: TOKEN_CREATE TOKEN_TABLE tbName . '(' fieldList ')'

    '('  shift, and go to state 61


state 50

   23 idxStmt: TOKEN_CREATE TOKEN_INDEX tbName . '(' colName ')'

    '('  shift, and go to state 62


state 51

   11 dbStmt: TOKEN_DROP TOKEN_DATABASE dbName .

    $default  reduce using rule 11 (dbStmt)


state 52

   14 tbStmt: TOKEN_DROP TOKEN_TABLE tbName .

    $default  reduce using rule 14 (tbStmt)


state 53

   24 idxStmt: TOKEN_DROP TOKEN_INDEX tbName . '(' colName ')'

    '('  shift, and go to state 63


state 54

   21 insert: TOKEN_INSERT TOKEN_INTO tbName . TOKEN_VALUES '(' valueList ')'

    TOKEN_VALUES  shift, and go to state 64


state 55

   18 tbStmt: TOKEN_DELETE TOKEN_FROM tbName . TOKEN_WHERE whereClause

    TOKEN_WHERE  shift, and go to state 65


state 56

   19 tbStmt: TOKEN_UPDATE tbName TOKEN_SET . setClause TOKEN_WHERE whereClause

    TOKEN_STRING_IDENTIFIER  shift, and go to state 66

    setClause  go to state 67
    colName    go to state 68


state 57

   20 tbStmt: TOKEN_SELECT selector TOKEN_FROM . tableList TOKEN_WHERE whereClause

    TOKEN_STRING_IDENTIFIER  shift, and go to state 32

    tableList  go to state 69
    tbName     go to state 70


state 58

   34 colList: colList ',' . col

    TOKEN_STRING_IDENTIFIER  shift, and go to state 34

    col      go to state 71
    tbName   go to state 39
    colName  go to state 40


state 59

   57 col: tbName '.' . colName

    TOKEN_STRING_IDENTIFIER  shift, and go to state 66

    colName  go to state 72


state 60

   22 insert: insert ',' '(' . valueList ')'

    TOKEN_NULL    shift, and go to state 73
    VALUE_STRING  shift, and go to state 74
    VALUE_INT     shift, and go to state 75
    VALUE_FLOAT   shift, and go to state 76

    value      go to state 77
    valueList  go to state 78


state 61

   15 tbStmt: TOKEN_CREATE TOKEN_TABLE tbName '(' . fieldList ')'

    TOKEN_PRIMARY            shift, and go to state 79
    TOKEN_FOREIGN            shift, and go to state 80
    TOKEN_STRING_IDENTIFIER  shift, and go to state 66

    fieldList  go to state 81
    field      go to state 82
    colName    go to state 83


state 62

   23 idxStmt: TOKEN_CREATE TOKEN_INDEX tbName '(' . colName ')'

    TOKEN_STRING_IDENTIFIER  shift, and go to state 66

    colName  go to state 84


state 63

   24 idxStmt: TOKEN_DROP TOKEN_INDEX tbName '(' . colName ')'

    TOKEN_STRING_IDENTIFIER  shift, and go to state 66

    colName  go to state 85


state 64

   21 insert: TOKEN_INSERT TOKEN_INTO tbName TOKEN_VALUES . '(' valueList ')'

    '('  shift, and go to state 86


state 65

   18 tbStmt: TOKEN_DELETE TOKEN_FROM tbName TOKEN_WHERE . whereClause

    TOKEN_STRING_IDENTIFIER  shift, and go to state 34

    whereClause  go to state 87
    condition    go to state 88
    col          go to state 89
    tbName       go to state 39
    colName      go to state 40


state 66

   68 colName: TOKEN_STRING_IDENTIFIER .

    $default  reduce using rule 68 (colName)


state 67

   19 tbStmt: TOKEN_UPDATE tbName TOKEN_SET setClause . TOKEN_WHERE whereClause
   50 setClause: setClause . ',' colName OP_EQ value

    TOKEN_WHERE  shift, and go to state 90
    ','          shift, and go to state 91


state 68

   49 setClause: colName . OP_EQ value

    OP_EQ  shift, and go to state 92


state 69

   20 tbStmt: TOKEN_SELECT selector TOKEN_FROM tableList . TOKEN_WHERE whereClause
   36 tableList: tableList . ',' tbName

    TOKEN_WHERE  shift, and go to state 93
    ','          shift, and go to state 94


state 70

   35 tableList: tbName .

    $default  reduce using rule 35 (tableList)


state 71

   34 colList: colList ',' col .

    $default  reduce using rule 34 (colList)


state 72

   57 col: tbName '.' colName .

    $default  reduce using rule 57 (col)


state 73

   46 value: TOKEN_NULL .

    $default  reduce using rule 46 (value)


state 74

   44 value: VALUE_STRING .

    $default  reduce using rule 44 (value)


state 75

   43 value: VALUE_INT .

    $default  reduce using rule 43 (value)


state 76

   45 value: VALUE_FLOAT .

    $default  reduce using rule 45 (value)


state 77

   47 valueList: value .

    $default  reduce using rule 47 (valueList)


state 78

   22 insert: insert ',' '(' valueList . ')'
   48 valueList: valueList . ',' value

    ')'  shift, and go to state 95
    ','  shift, and go to state 96


state 79

   29 field: TOKEN_PRIMARY . TOKEN_KEY '(' columnList ')'

    TOKEN_KEY  shift, and go to state 97


state 80

   30 field: TOKEN_FOREIGN . TOKEN_KEY '(' colName ')' TOKEN_REFERENCES tbName '(' colName ')'

    TOKEN_KEY  shift, and go to state 98


state 81

   15 tbStmt: TOKEN_CREATE TOKEN_TABLE tbName '(' fieldList . ')'
   26 fieldList: fieldList . ',' field

    ')'  shift, and go to state 99
    ','  shift, and go to state 100


state 82

   25 fieldList: field .

    $default  reduce using rule 25 (fieldList)


state 83

   27 field: colName . type
   28      | colName . type TOKEN_NOT TOKEN_NULL

    TOKEN_INT      shift, and go to state 101
    TOKEN_VARCHAR  shift, and go to state 102
    TOKEN_DATE     shift, and go to state 103
    TOKEN_FLOAT    shift, and go to state 104

    type  go to state 105


state 84

   23 idxStmt: TOKEN_CREATE TOKEN_INDEX tbName '(' colName . ')'

    ')'  shift, and go to state 106


state 85

   24 idxStmt: TOKEN_DROP TOKEN_INDEX tbName '(' colName . ')'

    ')'  shift, and go to state 107


state 86

   21 insert: TOKEN_INSERT TOKEN_INTO tbName TOKEN_VALUES '(' . valueList ')'

    TOKEN_NULL    shift, and go to state 73
    VALUE_STRING  shift, and go to state 74
    VALUE_INT     shift, and go to state 75
    VALUE_FLOAT   shift, and go to state 76

    value      go to state 77
    valueList  go to state 108


state 87

   18 tbStmt: TOKEN_DELETE TOKEN_FROM tbName TOKEN_WHERE whereClause .
   52 whereClause: whereClause . TOKEN_AND condition

    TOKEN_AND  shift, and go to state 109

    $default  reduce using rule 18 (tbStmt)


state 88

   51 whereClause: condition .

    $default  reduce using rule 51 (whereClause)


state 89

   53 condition: col . op expr
   54          | col . TOKEN_IS TOKEN_NULL
   55          | col . TOKEN_IS TOKEN_NOT TOKEN_NULL

    TOKEN_IS  shift, and go to state 110
    OP_LT     shift, and go to state 111
    OP_LE     shift, and go to state 112
    OP_GT     shift, and go to state 113
    OP_GE     shift, and go to state 114
    OP_EQ     shift, and go to state 115
    OP_NE     shift, and go to state 116

    op  go to state 117


state 90

   19 tbStmt: TOKEN_UPDATE tbName TOKEN_SET setClause TOKEN_WHERE . whereClause

    TOKEN_STRING_IDENTIFIER  shift, and go to state 34

    whereClause  go to state 118
    condition    go to state 88
    col          go to state 89
    tbName       go to state 39
    colName      go to state 40


state 91

   50 setClause: setClause ',' . colName OP_EQ value

    TOKEN_STRING_IDENTIFIER  shift, and go to state 66

    colName  go to state 119


state 92

   49 setClause: colName OP_EQ . value

    TOKEN_NULL    shift, and go to state 73
    VALUE_STRING  shift, and go to state 74
    VALUE_INT     shift, and go to state 75
    VALUE_FLOAT   shift, and go to state 76

    value  go to state 120


state 93

   20 tbStmt: TOKEN_SELECT selector TOKEN_FROM tableList TOKEN_WHERE . whereClause

    TOKEN_STRING_IDENTIFIER  shift, and go to state 34

    whereClause  go to state 121
    condition    go to state 88
    col          go to state 89
    tbName       go to state 39
    colName      go to state 40


state 94

   36 tableList: tableList ',' . tbName

    TOKEN_STRING_IDENTIFIER  shift, and go to state 32

    tbName  go to state 122


state 95

   22 insert: insert ',' '(' valueList ')' .

    $default  reduce using rule 22 (insert)


state 96

   48 valueList: valueList ',' . value

    TOKEN_NULL    shift, and go to state 73
    VALUE_STRING  shift, and go to state 74
    VALUE_INT     shift, and go to state 75
    VALUE_FLOAT   shift, and go to state 76

    value  go to state 123


state 97

   29 field: TOKEN_PRIMARY TOKEN_KEY . '(' columnList ')'

    '('  shift, and go to state 124


state 98

   30 field: TOKEN_FOREIGN TOKEN_KEY . '(' colName ')' TOKEN_REFERENCES tbName '(' colName ')'

    '('  shift, and go to state 125


state 99

   15 tbStmt: TOKEN_CREATE TOKEN_TABLE tbName '(' fieldList ')' .

    $default  reduce using rule 15 (tbStmt)


state 100

   26 fieldList: fieldList ',' . field

    TOKEN_PRIMARY            shift, and go to state 79
    TOKEN_FOREIGN            shift, and go to state 80
    TOKEN_STRING_IDENTIFIER  shift, and go to state 66

    field    go to state 126
    colName  go to state 83


state 101

   39 type: TOKEN_INT . '(' VALUE_INT ')'

    '('  shift, and go to state 127


state 102

   40 type: TOKEN_VARCHAR . '(' VALUE_INT ')'

    '('  shift, and go to state 128


state 103

   41 type: TOKEN_DATE .

    $default  reduce using rule 41 (type)


state 104

   42 type: TOKEN_FLOAT .

    $default  reduce using rule 42 (type)


state 105

   27 field: colName type .
   28      | colName type . TOKEN_NOT TOKEN_NULL

    TOKEN_NOT  shift, and go to state 129

    $default  reduce using rule 27 (field)


state 106

   23 idxStmt: TOKEN_CREATE TOKEN_INDEX tbName '(' colName ')' .

    $default  reduce using rule 23 (idxStmt)


state 107

   24 idxStmt: TOKEN_DROP TOKEN_INDEX tbName '(' colName ')' .

    $default  reduce using rule 24 (idxStmt)


state 108

   21 insert: TOKEN_INSERT TOKEN_INTO tbName TOKEN_VALUES '(' valueList . ')'
   48 valueList: valueList . ',' value

    ')'  shift, and go to state 130
    ','  shift, and go to state 96


state 109

   52 whereClause: whereClause TOKEN_AND . condition

    TOKEN_STRING_IDENTIFIER  shift, and go to state 34

    condition  go to state 131
    col        go to state 89
    tbName     go to state 39
    colName    go to state 40


state 110

   54 condition: col TOKEN_IS . TOKEN_NULL
   55          | col TOKEN_IS . TOKEN_NOT TOKEN_NULL

    TOKEN_NOT   shift, and go to state 132
    TOKEN_NULL  shift, and go to state 133


state 111

   60 op: OP_LT .

    $default  reduce using rule 60 (op)


state 112

   61 op: OP_LE .

    $default  reduce using rule 61 (op)


state 113

   62 op: OP_GT .

    $default  reduce using rule 62 (op)


state 114

   63 op: OP_GE .

    $default  reduce using rule 63 (op)


state 115

   64 op: OP_EQ .

    $default  reduce using rule 64 (op)


state 116

   65 op: OP_NE .

    $default  reduce using rule 65 (op)


state 117

   53 condition: col op . expr

    TOKEN_NULL               shift, and go to state 73
    TOKEN_STRING_IDENTIFIER  shift, and go to state 34
    VALUE_STRING             shift, and go to state 74
    VALUE_INT                shift, and go to state 75
    VALUE_FLOAT              shift, and go to state 76

    value    go to state 134
    col      go to state 135
    expr     go to state 136
    tbName   go to state 39
    colName  go to state 40


state 118

   19 tbStmt: TOKEN_UPDATE tbName TOKEN_SET setClause TOKEN_WHERE whereClause .
   52 whereClause: whereClause . TOKEN_AND condition

    TOKEN_AND  shift, and go to state 109

    $default  reduce using rule 19 (tbStmt)


state 119

   50 setClause: setClause ',' colName . OP_EQ value

    OP_EQ  shift, and go to state 137


state 120

   49 setClause: colName OP_EQ value .

    $default  reduce using rule 49 (setClause)


state 121

   20 tbStmt: TOKEN_SELECT selector TOKEN_FROM tableList TOKEN_WHERE whereClause .
   52 whereClause: whereClause . TOKEN_AND condition

    TOKEN_AND  shift, and go to state 109

    $default  reduce using rule 20 (tbStmt)


state 122

   36 tableList: tableList ',' tbName .

    $default  reduce using rule 36 (tableList)


state 123

   48 valueList: valueList ',' value .

    $default  reduce using rule 48 (valueList)


state 124

   29 field: TOKEN_PRIMARY TOKEN_KEY '(' . columnList ')'

    TOKEN_STRING_IDENTIFIER  shift, and go to state 66

    columnList  go to state 138
    colName     go to state 139


state 125

   30 field: TOKEN_FOREIGN TOKEN_KEY '(' . colName ')' TOKEN_REFERENCES tbName '(' colName ')'

    TOKEN_STRING_IDENTIFIER  shift, and go to state 66

    colName  go to state 140


state 126

   26 fieldList: fieldList ',' field .

    $default  reduce using rule 26 (fieldList)


state 127

   39 type: TOKEN_INT '(' . VALUE_INT ')'

    VALUE_INT  shift, and go to state 141


state 128

   40 type: TOKEN_VARCHAR '(' . VALUE_INT ')'

    VALUE_INT  shift, and go to state 142


state 129

   28 field: colName type TOKEN_NOT . TOKEN_NULL

    TOKEN_NULL  shift, and go to state 143


state 130

   21 insert: TOKEN_INSERT TOKEN_INTO tbName TOKEN_VALUES '(' valueList ')' .

    $default  reduce using rule 21 (insert)


state 131

   52 whereClause: whereClause TOKEN_AND condition .

    $default  reduce using rule 52 (whereClause)


state 132

   55 condition: col TOKEN_IS TOKEN_NOT . TOKEN_NULL

    TOKEN_NULL  shift, and go to state 144


state 133

   54 condition: col TOKEN_IS TOKEN_NULL .

    $default  reduce using rule 54 (condition)


state 134

   59 expr: value .

    $default  reduce using rule 59 (expr)


state 135

   58 expr: col .

    $default  reduce using rule 58 (expr)


state 136

   53 condition: col op expr .

    $default  reduce using rule 53 (condition)


state 137

   50 setClause: setClause ',' colName OP_EQ . value

    TOKEN_NULL    shift, and go to state 73
    VALUE_STRING  shift, and go to state 74
    VALUE_INT     shift, and go to state 75
    VALUE_FLOAT   shift, and go to state 76

    value  go to state 145


state 138

   29 field: TOKEN_PRIMARY TOKEN_KEY '(' columnList . ')'
   38 columnList: columnList . ',' colName

    ')'  shift, and go to state 146
    ','  shift, and go to state 147


state 139

   37 columnList: colName .

    $default  reduce using rule 37 (columnList)


state 140

   30 field: TOKEN_FOREIGN TOKEN_KEY '(' colName . ')' TOKEN_REFERENCES tbName '(' colName ')'

    ')'  shift, and go to state 148


state 141

   39 type: TOKEN_INT '(' VALUE_INT . ')'

    ')'  shift, and go to state 149


state 142

   40 type: TOKEN_VARCHAR '(' VALUE_INT . ')'

    ')'  shift, and go to state 150


state 143

   28 field: colName type TOKEN_NOT TOKEN_NULL .

    $default  reduce using rule 28 (field)


state 144

   55 condition: col TOKEN_IS TOKEN_NOT TOKEN_NULL .

    $default  reduce using rule 55 (condition)


state 145

   50 setClause: setClause ',' colName OP_EQ value .

    $default  reduce using rule 50 (setClause)


state 146

   29 field: TOKEN_PRIMARY TOKEN_KEY '(' columnList ')' .

    $default  reduce using rule 29 (field)


state 147

   38 columnList: columnList ',' . colName

    TOKEN_STRING_IDENTIFIER  shift, and go to state 66

    colName  go to state 151


state 148

   30 field: TOKEN_FOREIGN TOKEN_KEY '(' colName ')' . TOKEN_REFERENCES tbName '(' colName ')'

    TOKEN_REFERENCES  shift, and go to state 152


state 149

   39 type: TOKEN_INT '(' VALUE_INT ')' .

    $default  reduce using rule 39 (type)


state 150

   40 type: TOKEN_VARCHAR '(' VALUE_INT ')' .

    $default  reduce using rule 40 (type)


state 151

   38 columnList: columnList ',' colName .

    $default  reduce using rule 38 (columnList)


state 152

   30 field: TOKEN_FOREIGN TOKEN_KEY '(' colName ')' TOKEN_REFERENCES . tbName '(' colName ')'

    TOKEN_STRING_IDENTIFIER  shift, and go to state 32

    tbName  go to state 153


state 153

   30 field: TOKEN_FOREIGN TOKEN_KEY '(' colName ')' TOKEN_REFERENCES tbName . '(' colName ')'

    '('  shift, and go to state 154


state 154

   30 field: TOKEN_FOREIGN TOKEN_KEY '(' colName ')' TOKEN_REFERENCES tbName '(' . colName ')'

    TOKEN_STRING_IDENTIFIER  shift, and go to state 66

    colName  go to state 155


state 155

   30 field: TOKEN_FOREIGN TOKEN_KEY '(' colName ')' TOKEN_REFERENCES tbName '(' colName . ')'

    ')'  shift, and go to state 156


state 156

   30 field: TOKEN_FOREIGN TOKEN_KEY '(' colName ')' TOKEN_REFERENCES tbName '(' colName ')' .

    $default  reduce using rule 30 (field)
